Fix wiki code block's overflow

--- a/src/stylesheets/modules/_layout.sass
+++ b/src/stylesheets/modules/_layout.sass
@@ -1,5 +1,5 @@
-.Redspot
-  z-index: 10
+html > body #content
+  min-height: 100%
 
 #wrapper3
   display: flex
@@ -23,13 +23,6 @@
 
 #main, #header
   padding: 0
-
-#main
-  display: flex
-  margin: 0
-  height: calc( 100% - 2.25em )
-  overflow: auto
-  background: $main-bg
 
 #header
   z-index: 1
@@ -55,11 +48,19 @@
   h1 a.ancestor
     font-size: 100%
 
+#main
+  align-items: stretch
+  // display: flex
+  margin: 0
+  height: calc( 100% - 2.25em )
+  overflow: auto
+  background: $main-bg
 
-#main.nosidebar #content,
 #content
-  width: auto
-  flex: 1 1 75%
+  // flex: 1 1 75%
+  display: inline-block
+  vertical-align: top
+  width: 75%
   padding: 2em 3em
   border: 0
   border-right: 1px solid rgba(0,0,0,0.1)
@@ -67,20 +68,30 @@
   h2
     padding: 0
 
-html > body #content
-  min-height: 100%
-
-
 #sidebar
-  width: auto
-  flex: 1 0 25%
-  padding: 1em 1.5em
+  // flex: 1 0 25%
+  display: inline-block
+  vertical-align: top
+  width: 25%
   order: 1
+  z-index: 11
+  padding: 1em 1.5em
+  background: #fff
   h3
     color: #205b75
   a.selected
     background-color: #398BB3
 
+
+
+.controller-wiki,
+.controller-boards,
+.controller-messages
+  #main #content
+    max-width: 1024px
+    padding-bottom: 4em
+    margin: 0
+    overflow: hidden
 
 #main-menu
   left: 0
@@ -129,14 +140,6 @@ html > body #content
       background: url('../images/icons/#{$icon}.png') center left no-repeat
 
 
-
-.controller-wiki,
-.controller-boards,
-.controller-messages
-  #main #content
-    max-width: 1024px
-    margin: 0
-    padding-bottom: 4em
 
 
 #footer
